# touchy-pad

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Justfile  README.md  TODO.md  VERSION
.devcontainer/: Containerfile  devcontainer.json
.github/actions/setup-python-poetry-just-proto/: action.yml
.github/workflows/: app-ci.yml  build-firmware.yml  build-opendeck.yml  release.yml  testpypi.yml
app/: README.md  pyproject.toml
app/examples/: demo.py
app/src/touchy_pad/: cli.py  client.py  hid_keys.py  images.py  macros.py  paths.py  screens.py  transport.py  update.py
app/tests/: test_api.py  test_client.py  test_images.py  test_lvgl_image.py  test_screens.py  test_sim_transport.py  test_sim_window.py  test_touchydeck.py  test_transport_serial.py
docs/: TODO.md  companion-app.md  design.md  development.md  hardware.md  host-api.md  led-art.md  opendeck-device-plugin.md  opendeck.md  performance.md  python-api.md  rust-api.md  simulator.md  ui.md  why-not-xml.md
firmware/: CMakeLists.txt  README.md  sdkconfig.defaults  version.cmake
firmware/boards/cyd_common/: board.cpp  display.cpp  touch.cpp
firmware/boards/elecrow_p4_lcd_7/: sdkconfig.defaults
firmware/boards/elecrow_s3_lcd_7/: sdkconfig.defaults
firmware/boards/elecrow_s3_lcd_7_adv/: sdkconfig.defaults
firmware/boards/elecrow_s3_lcd_7_adv/board/: CMakeLists.txt  idf_component.yml
firmware/boards/esp32_2432s024/: sdkconfig.defaults
firmware/boards/esp32_2432s028rv3/: sdkconfig.defaults
firmware/boards/esp32_2432s028rv3/board/: CMakeLists.txt  board.cpp  board_pins.h  display.cpp  idf_component.yml  touch.cpp
firmware/boards/jc4827w543/: sdkconfig.defaults
firmware/boards/squixl/: sdkconfig.defaults
firmware/boards/waveshare_s3_lcd_7b/: sdkconfig.defaults
firmware/main/: CMakeLists.txt  backlight.cpp  backlight.h  board.h  coredump_report.cpp  host_api.cpp  host_api.h  idf_component.yml  log_line.cpp  log_line.h  log_proto.cpp  log_proto.h  macros.cpp  macros.h  main.cpp  platform.cpp  platform.h  prefs.cpp  prefs.h  screen_layout.cpp  screen_layout.h  screens.cpp  screens.h  touch.h  trackpad_widget.cpp  trackpad_widget.h  usb_hid.cpp  usb_hid.h  usb_hid_stub.cpp  version.h.in  widget_actions.cpp  widget_actions.h  widget_builders.cpp  widget_builders.h  widget_styles.cpp
firmware/main/fs/: flash_fs.cpp  fs.cpp  fs.h  ram_fs.h
firmware/main/widgets/: force_render_widget.cpp  force_render_widget.h  fps_widget.cpp  fps_widget.h  image_mmap.cpp  image_mmap.h  screen_layout.cpp  screen_layout.h  widget_actions.cpp  widget_actions.h  widget_builders.cpp  widget_builders.h  widget_styles.cpp  widget_styles.h
firmware/partitions/: 8M.csv
proto/: default_screen.json  embed_screen_json.py  fix_proto_imports.py  gen_default_screen.py  preferences.options  preferences.proto  touchy.options  touchy.proto  widgets.options  widgets.proto
rust/: Cargo.toml
rust/touchy-demo/src/: main.rs
rust/touchy-opendeck/: Cargo.toml  README.md
rust/touchy-opendeck/com.geeksville.touchypad.sdPlugin/: .gitignore  manifest.json
rust/touchy-opendeck/docs/: development.md
rust/touchy-opendeck/src/: layout.rs  main.rs  plugin.rs
rust/touchy-pad/: Cargo.toml  build.rs
rust/touchy-pad/proto/: touchy.proto
tools/streamdeck-probe/: README.md  pyproject.toml
tools/streamdeck-probe/src/streamdeck_probe/: cli.py
udev/: 99-touchy-pad.rules
(+52 files in other folders)
