[project]
name = "streamdeck-probe"
version = "0.1.0"
description = "Reverse-engineering probe for Elgato StreamDeck devices. Produces JSONL + text logs used to plan touchy-pad's StreamDeck API emulation (Stage 50.2)."
authors = [{ name = "Touchy-Pad contributors" }]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    # We probe StreamDecks *through* the touchy-pad facade
    # (`touchy_pad.touchydeck.install()` monkey-patches
    # `StreamDeck.DeviceManager.enumerate` to also expose TouchyDecks).
    # The upstream `streamcontroller-streamdeck` library is pulled in
    # transitively via the [streamdeck] extra below — no direct dep
    # here, by design, so the probe always exercises our wrapper.
    #
    # Used to synthesize per-key test tiles before calling set_key_image().
    "pillow>=10",
    # CLI framework.
    "click>=8.1,<9",
    # HID backend used by streamcontroller-streamdeck on Linux. Bundling a
    # default so `poetry install` "just works"; users on macOS/Windows may
    # need their own backend instead.
    "hidapi>=0.14",
]

[project.scripts]
streamdeck-probe = "streamdeck_probe.cli:main"

[tool.poetry]
packages = [{ include = "streamdeck_probe", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
# Path dependency on the main touchy-pad app so we can `import
# touchy_pad.touchydeck` + drive the in-process sim from this probe.
# `develop=true` keeps it editable so iterating on the lib doesn't
# require a reinstall here.
touchy-pad = { path = "../../app", develop = true, extras = ["streamdeck", "sim"] }

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
